@@ -19,6 +19,7 @@ package org.apache.solr.request;
 
 import org.apache.commons.io.IOUtils;
 import org.apache.solr.SolrJettyTestBase;
+import org.apache.solr.SolrTestCaseJ4.SuppressSSL;
 import org.apache.solr.client.solrj.SolrQuery;
 import org.apache.solr.client.solrj.SolrServer;
 import org.apache.solr.client.solrj.SolrServerException;
@@ -45,14 +46,10 @@ import java.net.URLEncoder;
 /**
  * See SOLR-2854.
  */
+@SuppressSSL     // does not yet work with ssl - uses raw URL
 public class TestRemoteStreaming extends SolrJettyTestBase {
 
   private static final File solrHomeDirectory = new File(TEMP_DIR, "TestRemoteStreaming");
-
-  static {
-    // does not yet work with ssl - uses raw URL
-    ALLOW_SSL = false;
-  }
   
   @BeforeClass
   public static void beforeTest() throws Exception {
